tests/ui/discord-frontend/entity_macro/expected_square_brackets_9.stderr
error: expected square brackets
  --> tests/ui/discord-frontend/entity_macro/expected_square_brackets_9.rs:37:15
   |
LL |     exclude = core
   |               ^^^^

error: aborting due to 1 previous error

